[project]
name = "hiring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "openai>=2.7.2",
    "pandas>=2.3.3",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.scripts]
resume_screener = "main:main"

[tool.setuptools]
py-modules = ["main"]
